--- a/footer-toc/index.html
+++ b/footer-toc/index.html
@@ -540,6 +540,145 @@ white-space: break-spaces;
 *, :after, :before {
 box-sizing: inherit;
 }
+*, :after, :before {
+box-sizing: inherit;
+}
+
+body, ol ol, ol ul, ul ol, ul ul {
+margin:0
+}
+pre, table{
+overflow:auto
+}
+html {
+height: 100%;
+width: 100%;
+}
+
+body {
+height: 100%;
+width: 100%;
+word-wrap: break-word;
+}
+input, code {
+vertical-align: middle;
+}
+pre {
+white-space: break-spaces;
+}
+html {
+-webkit-font-smoothing: antialiased;
+text-rendering: optimizelegibility;
+-webkit-text-size-adjust: 100%;
+text-size-adjust: 100%;
+}
+iframe {
+border: 0;
+color-scheme: auto;
+}
+
+pre code {
+overflow-x: auto;
+display: block;
+padding: 10px !important;
+}
+
+.ft_md ul,
+.ft_md ol{
+margin: 10px 0;
+}
+
+.ft_md ul ul,
+.ft_md ul ol,
+.ft_md ol ul,
+.ft_md ol ol {
+margin: 0;
+}
+
+.ft_md ul li,
+.ft_md ol li,
+.ft_md ul ol li .ft_md ul ul li .ft_md ol ul li .ft_md ol ol li {
+position: relative;
+padding-left: 32px;
+margin: 4px 0;
+}
+
+.ft_md ul {
+list-style: none;
+padding-left: 0;
+}
+
+.ft_md ol {
+list-style: none;
+padding-left: 0;
+counter-reset: item;
+}
+
+.ft_md ol li:before,
+.ft_md ol ol li:before,
+.ft_md ul ol li:before {
+content: counter(item);
+counter-increment: item;
+font-size: 11px;
+line-height: 10px;
+text-align: center;
+padding: 4px 0;
+height: 10px;
+width: 18px;
+border-radius: 10px;
+position: absolute;
+left: 0;
+top: 5px;
+}
+
+.ft_md ul li::before,
+.ft_md ul ul li::before,
+.ft_md ol ul li::before {
+content: "";
+position: absolute;
+width: 6px;
+height: 6px;
+left: 8px;
+top: 10px;
+border-radius: 50%;
+background: #c1c8ce;
+}
+
+.ft_md a {
+text-decoration: none;
+color: #6262ee;
+}
+
+.ft_md a:visited {
+text-decoration: none;
+color: #ad71e4;
+}
+
+
+
+.ft_md a:hover {
+text-decoration: none;
+}
+
+.ft_md code {
+padding: 0.1rem 0.25rem;
+border-radius: 4px;
+background-color: #ffffff1f;
+}
+
+.ft_md blockquote {
+padding: 0.25rem 1rem;
+margin: 1rem 0;
+border-radius: 3px;
+}
+
+.ft_md blockquote > blockquote {
+margin: 0;
+}
+
+body.fpm-dark .ft_md a {
+text-decoration: none;
+}
 
 
 </style>
@@ -547,7 +686,227 @@ box-sizing: inherit;
 </head>
 <body style="height: 100%; margin: 0;">
 
-<div data-id="main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; height: 100%; justify-content: start; text-decoration: none; width: 100%" ></div>
+<div data-id="main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; height: 100%; justify-content: start; text-decoration: none; width: 100%" ></div><style>
+
+
+
+
+
+
+
+
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 200;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-200-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 200;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-200-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 200;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-200-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 200;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-200-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 200;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-200-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 200;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-200-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 300;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-300-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 300;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-300-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 300;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-300-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 300;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-300-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 300;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-300-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 300;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-300-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 400;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-400-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 400;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-400-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 400;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-400-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 400;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-400-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 400;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-400-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 400;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-400-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 500;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-500-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 500;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-500-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 500;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-500-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 500;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-500-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 500;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-500-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 500;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-500-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 600;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-600-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 600;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-600-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 600;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-600-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 600;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-600-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 600;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-600-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 600;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-600-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 700;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-700-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 700;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-700-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 700;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-700-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 700;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-700-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 700;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-700-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 700;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-700-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+font-style: normal;
+font-weight: 800;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-800-normal-cyrillic-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+font-style: normal;
+font-weight: 800;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-800-normal-cyrillic.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0370-03FF;
+font-style: normal;
+font-weight: 800;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-800-normal-greek.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+1EA0-1EF9, U+20AB;
+font-style: normal;
+font-weight: 800;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-800-normal-vietnamese.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+font-style: normal;
+font-weight: 800;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-800-normal-latin-ext.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+@font-face { unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+font-style: normal;
+font-weight: 800;
+src: url(-/fifthtry.github.io/manrope-font/static/Manrope-800-normal-latin.woff2) format('woff2');
+font-family: fifthtry-github-io-manrope-font-Manrope }
+
+</style>
 
 
 <script>
