--- a/lib/index.html
+++ b/lib/index.html
@@ -1686,6 +1686,9 @@ else {
 return f;
 }
 }
+function len(data) {
+return data.length;
+}
 (function () {
 document.addEventListener('keypress', (event) => {
 let key = event.key;
@@ -1791,6 +1794,12 @@ e.rel = "prefetch", e.href = t, document.head.appendChild(e), n.add(t)
 
 
 
+function ftd__copy_to_clipboard___main(a,args,data,id){
+return (copy_to_clipboard(a,args,data,id));
+}
+
+
+
 function ftd__enable_dark_mode___main(args,data,id){
 return (enable_dark_mode(args,data,id));
 }
@@ -1842,6 +1851,8 @@ a.value = v
 function ftd__toggle___main(a,args,data,id){
 a.value = !a.value
 }
+
+
 
 
 
