--- a/pages-done/index.html
+++ b/pages-done/index.html
@@ -591,6 +591,34 @@ display: block;
 padding: 10px !important;
 }
 
+/* Common styles  */
+.ft_common{
+text-decoration: none;
+box-sizing: border-box;
+border-top-width: 0px;
+border-bottom-width: 0px;
+border-left-width: 0px;
+border-right-width: 0px;
+border-style: solid;
+height: auto;
+width: auto;
+}
+
+/* Common container attributes */
+.ft_row, .ft_column {
+display: flex;
+align-items: start;
+justify-content: start
+}
+
+.ft_row {
+flex-direction: row;
+}
+
+.ft_column {
+flex-direction: column;
+}
+
 .ft_md ul,
 .ft_md ol{
 margin: 10px 0;
@@ -706,7 +734,7 @@ margin-block-end: 1em;
 </head>
 <body style="height: 100%; margin: 0;">
 
-<div data-id="main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; height: 100%; justify-content: start; text-decoration: none; width: 100%" ><div data-id="0:main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: row; height: auto; justify-content: start; text-decoration: none; width: 100%" ><div data-id="0,0:main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; height: auto; justify-content: start; text-decoration: none; width: 100%" ><div data-id="0,0,0:main" style="border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; color: rgba(231,231,228,1); font-family: sans-serif; font-size: 22px; font-weight: 400; height: auto; line-height: 34px; text-decoration: none; width: auto" class="ft_md">DONE :- <ol> <li>Hosting –15</li> <li>Events –32</li> <li>Contributions - in new branch –42</li> <li>Feature Listing –7</li> </ol></div></div><div data-id="0,1:main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; height: auto; justify-content: start; text-decoration: none; width: 100%" ><div data-id="0,1,0:main" style="border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; color: rgba(231,231,228,1); font-family: sans-serif; font-size: 22px; font-weight: 400; height: auto; line-height: 34px; text-decoration: none; width: auto" class="ft_md">NOT DONE :- <ol start="2"> <li>Icons - Dev</li> <li>Fonts - Dev</li> <li>Colors - Dev</li> <li>Component- Dev</li> <li>Documentation Page</li> <li>Template detail page</li> <li>Authentication</li> <li>WASM Support</li> <li>Backend Support</li> <li>Deployment</li> <li>CLI &amp; API</li> </ol></div></div><div data-id="0,2:main" style="align-items: start; border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; display: flex; flex-direction: column; height: auto; justify-content: start; text-decoration: none; width: 100%" ><div data-id="0,2,0:main" style="border-bottom-width: 0px; border-left-width: 0px; border-right-width: 0px; border-style: solid; border-top-width: 0px; box-sizing: border-box; color: rgba(231,231,228,1); font-family: sans-serif; font-size: 22px; font-weight: 400; height: auto; line-height: 34px; text-decoration: none; width: auto" class="ft_md">DONE :- (21/03/23) <ol> <li>Homepage</li> <li>Why Fastn?</li> <li>Components</li> <li>Component Library</li> <li>How to use Fastn</li> <li>About OS</li> <li>Learn –27</li> <li>Learn FTD - Developers –29</li> <li>FTD –35</li> <li>Builder Manual –36</li> <li>Internet OS –24</li> <li>INTERNET OS –38</li> <li>Use Cases –39</li> <li>Authoring –41</li> <li>API &amp; Documentation</li> <li>Blogs</li> <li>Microsite</li> <li>Landing Page - Template</li> <li>API - Template</li> <li>Blogs - Template</li> <li>Microsite - Template</li> <li>Templates –17</li> <li>Landing Page –43</li> <li>Open Source –26</li> <li>Open Source –37</li> <li>Front End Infrastructure - in new branch –11</li> <li>Design Systems - in new branch</li> <li>Building Webapps</li> <li>Design System - Learn</li> <li>Icons &amp; Illustration Page</li> <li>Font List page</li> <li>Colors</li> <li>Icons &amp; Illustration Page</li> <li>Font List page</li> <li>Colors</li> <li>Templates Learn</li> <li>Design System - Learn</li> <li>Explore more</li> <li>Blogs - Detail</li> <li>Developers</li> <li>Design</li> <li>Blogs</li> <li>Buttons</li> <li>Headers</li> <li>Other Components</li> </ol></div></div></div></div><style>
+<div data-id="main" style="height: 100%; width: 100%" class="ft_common ft_column"><div data-id="0:main" style="width: 100%" class="ft_common ft_row"><div data-id="0,0:main" style="width: 100%" class="ft_common ft_column"><div data-id="0,0,0:main" style="color: rgba(231,231,228,1); font-family: sans-serif; font-size: 22px; font-weight: 400; line-height: 34px" class="ft_common ft_md">DONE :- <ol> <li>Hosting –15</li> <li>Events –32</li> <li>Contributions - in new branch –42</li> <li>Feature Listing –7</li> </ol></div></div><div data-id="0,1:main" style="width: 100%" class="ft_common ft_column"><div data-id="0,1,0:main" style="color: rgba(231,231,228,1); font-family: sans-serif; font-size: 22px; font-weight: 400; line-height: 34px" class="ft_common ft_md">NOT DONE :- <ol start="2"> <li>Icons - Dev</li> <li>Fonts - Dev</li> <li>Colors - Dev</li> <li>Component- Dev</li> <li>Documentation Page</li> <li>Template detail page</li> <li>Authentication</li> <li>WASM Support</li> <li>Backend Support</li> <li>Deployment</li> <li>CLI &amp; API</li> </ol></div></div><div data-id="0,2:main" style="width: 100%" class="ft_common ft_column"><div data-id="0,2,0:main" style="color: rgba(231,231,228,1); font-family: sans-serif; font-size: 22px; font-weight: 400; line-height: 34px" class="ft_common ft_md">DONE :- (21/03/23) <ol> <li>Homepage</li> <li>Why Fastn?</li> <li>Components</li> <li>Component Library</li> <li>How to use Fastn</li> <li>About OS</li> <li>Learn –27</li> <li>Learn FTD - Developers –29</li> <li>FTD –35</li> <li>Builder Manual –36</li> <li>Internet OS –24</li> <li>INTERNET OS –38</li> <li>Use Cases –39</li> <li>Authoring –41</li> <li>API &amp; Documentation</li> <li>Blogs</li> <li>Microsite</li> <li>Landing Page - Template</li> <li>API - Template</li> <li>Blogs - Template</li> <li>Microsite - Template</li> <li>Templates –17</li> <li>Landing Page –43</li> <li>Open Source –26</li> <li>Open Source –37</li> <li>Front End Infrastructure - in new branch –11</li> <li>Design Systems - in new branch</li> <li>Building Webapps</li> <li>Design System - Learn</li> <li>Icons &amp; Illustration Page</li> <li>Font List page</li> <li>Colors</li> <li>Icons &amp; Illustration Page</li> <li>Font List page</li> <li>Colors</li> <li>Templates Learn</li> <li>Design System - Learn</li> <li>Explore more</li> <li>Blogs - Detail</li> <li>Developers</li> <li>Design</li> <li>Blogs</li> <li>Buttons</li> <li>Headers</li> <li>Other Components</li> </ol></div></div></div></div><style>
 
 
 
@@ -1647,7 +1675,7 @@ var parser = new DOMParser();
 var doc = parser.parseFromString(str, 'text/html');
 return doc.body;
 }
-;
+
 function get_name_and_remaining(name) {
 let part1 = "";
 let pattern_to_split_at = name;
@@ -2175,9 +2203,9 @@ set_data_value(data, "ftd#dark-mode", new_value);
 
 window.ftd.call_mutable_value_changes("ftd#dark-mode", "main");
 window.ftd.call_immutable_value_changes("ftd#dark-mode", "main");
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__color"]){window.node_change_main["0,0,0:main__color"](data);
-}
 if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__color"]){window.node_change_main["0,1,0:main__color"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__color"]){window.node_change_main["0,0,0:main__color"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__color"]){window.node_change_main["0,2,0:main__color"](data);
 }
@@ -2192,11 +2220,11 @@ set_data_value(data, "ftd#default-colors", new_value);
 
 window.ftd.call_mutable_value_changes("ftd#default-colors", "main");
 window.ftd.call_immutable_value_changes("ftd#default-colors", "main");
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__color"]){window.node_change_main["0,2,0:main__color"](data);
-}
 if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__color"]){window.node_change_main["0,0,0:main__color"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__color"]){window.node_change_main["0,1,0:main__color"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__color"]){window.node_change_main["0,2,0:main__color"](data);
 }
 };
 
@@ -2209,35 +2237,35 @@ set_data_value(data, "ftd#default-types", new_value);
 
 window.ftd.call_mutable_value_changes("ftd#default-types", "main");
 window.ftd.call_immutable_value_changes("ftd#default-types", "main");
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-weight"]){window.node_change_main["0,0,0:main__font-weight"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__line-height"]){window.node_change_main["0,0,0:main__line-height"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-size"]){window.node_change_main["0,0,0:main__font-size"](data);
+}
 if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-family"]){window.node_change_main["0,1,0:main__font-family"](data);
 }
-if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-size"]){window.node_change_main["0,1,0:main__font-size"](data);
-}
 if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__line-height"]){window.node_change_main["0,2,0:main__line-height"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-weight"]){window.node_change_main["0,1,0:main__font-weight"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-family"]){window.node_change_main["0,2,0:main__font-family"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-weight"]){window.node_change_main["0,2,0:main__font-weight"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__letter-spacing"]){window.node_change_main["0,1,0:main__letter-spacing"](data);
 }
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-family"]){window.node_change_main["0,0,0:main__font-family"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__line-height"]){window.node_change_main["0,1,0:main__line-height"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__letter-spacing"]){window.node_change_main["0,2,0:main__letter-spacing"](data);
+}
 if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-size"]){window.node_change_main["0,2,0:main__font-size"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__letter-spacing"]){window.node_change_main["0,0,0:main__letter-spacing"](data);
 }
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-family"]){window.node_change_main["0,0,0:main__font-family"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-weight"]){window.node_change_main["0,0,0:main__font-weight"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-size"]){window.node_change_main["0,0,0:main__font-size"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__letter-spacing"]){window.node_change_main["0,2,0:main__letter-spacing"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__line-height"]){window.node_change_main["0,0,0:main__line-height"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-family"]){window.node_change_main["0,2,0:main__font-family"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__line-height"]){window.node_change_main["0,1,0:main__line-height"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-weight"]){window.node_change_main["0,1,0:main__font-weight"](data);
+if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-size"]){window.node_change_main["0,1,0:main__font-size"](data);
 }
 };
 
@@ -2250,35 +2278,35 @@ set_data_value(data, "ftd#device", new_value);
 
 window.ftd.call_mutable_value_changes("ftd#device", "main");
 window.ftd.call_immutable_value_changes("ftd#device", "main");
-if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__line-height"]){window.node_change_main["0,1,0:main__line-height"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-family"]){window.node_change_main["0,2,0:main__font-family"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__line-height"]){window.node_change_main["0,2,0:main__line-height"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-size"]){window.node_change_main["0,0,0:main__font-size"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-family"]){window.node_change_main["0,0,0:main__font-family"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-size"]){window.node_change_main["0,2,0:main__font-size"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__letter-spacing"]){window.node_change_main["0,2,0:main__letter-spacing"](data);
-}
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__letter-spacing"]){window.node_change_main["0,0,0:main__letter-spacing"](data);
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-weight"]){window.node_change_main["0,2,0:main__font-weight"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__line-height"]){window.node_change_main["0,0,0:main__line-height"](data);
 }
-if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-size"]){window.node_change_main["0,1,0:main__font-size"](data);
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-size"]){window.node_change_main["0,2,0:main__font-size"](data);
 }
-if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-weight"]){window.node_change_main["0,0,0:main__font-weight"](data);
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-size"]){window.node_change_main["0,0,0:main__font-size"](data);
 }
-if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-family"]){window.node_change_main["0,1,0:main__font-family"](data);
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__letter-spacing"]){window.node_change_main["0,2,0:main__letter-spacing"](data);
 }
 if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-weight"]){window.node_change_main["0,1,0:main__font-weight"](data);
 }
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__line-height"]){window.node_change_main["0,2,0:main__line-height"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-family"]){window.node_change_main["0,0,0:main__font-family"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-family"]){window.node_change_main["0,1,0:main__font-family"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__font-weight"]){window.node_change_main["0,0,0:main__font-weight"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__font-size"]){window.node_change_main["0,1,0:main__font-size"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__line-height"]){window.node_change_main["0,1,0:main__line-height"](data);
+}
+if(!!window["node_change_main"] && !!window.node_change_main["0,0,0:main__letter-spacing"]){window.node_change_main["0,0,0:main__letter-spacing"](data);
+}
 if(!!window["node_change_main"] && !!window.node_change_main["0,1,0:main__letter-spacing"]){window.node_change_main["0,1,0:main__letter-spacing"](data);
 }
-if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-weight"]){window.node_change_main["0,2,0:main__font-weight"](data);
+if(!!window["node_change_main"] && !!window.node_change_main["0,2,0:main__font-family"]){window.node_change_main["0,2,0:main__font-family"](data);
 }
 };
 
